adding Quickstart Section

--- a/docs/src/css/global.css
+++ b/docs/src/css/global.css
@@ -13,3 +13,13 @@
 }
 
 /* Hero Title */
+
+/* Section */
+.section__ref::before {
+    content: '';
+    display: block;
+    height: 64px;
+    margin: -32px 0 0;
+}
+
+/* Section */
