--- a/docs/src/css/theming.css
+++ b/docs/src/css/theming.css
@@ -1,24 +1,31 @@
 /* You can override the default Infima variables here. */
+/**
+- primary: #00a4e0
+- secondary: #cc3362
+- dark: #00131a
+- light: white
+ */
+
 :root {
-    --ifm-color-primary: #0093e1;
-    --ifm-color-primary-dark: #0084cb;
-    --ifm-color-primary-darker: #007dbf;
-    --ifm-color-primary-darkest: #00679e;
-    --ifm-color-primary-light: #00a2f8;
-    --ifm-color-primary-lighter: #04a8ff;
-    --ifm-color-primary-lightest: #25b4ff;
+    --ifm-color-primary: #00a4e0;
+    --ifm-color-primary-dark: #0094ca;
+    --ifm-color-primary-darker: #008bbe;
+    --ifm-color-primary-darkest: #00739d;
+    --ifm-color-primary-light: #00b4f6;
+    --ifm-color-primary-lighter: #03bbff;
+    --ifm-color-primary-lightest: #24c4ff;
     --ifm-code-font-size: 95%;
     --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
 [data-theme='dark'] {
-    --ifm-color-primary: #0093e1;
-    --ifm-color-primary-dark: #0084cb;
-    --ifm-color-primary-darker: #007dbf;
-    --ifm-color-primary-darkest: #00679e;
-    --ifm-color-primary-light: #00a2f8;
-    --ifm-color-primary-lighter: #04a8ff;
-    --ifm-color-primary-lightest: #25b4ff;
+    --ifm-color-primary: #00a4e0;
+    --ifm-color-primary-dark: #0094ca;
+    --ifm-color-primary-darker: #008bbe;
+    --ifm-color-primary-darkest: #00739d;
+    --ifm-color-primary-light: #00b4f6;
+    --ifm-color-primary-lighter: #03bbff;
+    --ifm-color-primary-lightest: #24c4ff;
     --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
 }
