Add header and form grid

--- a/pkg/ui/chooser/embed/layouts/main.html
+++ b/pkg/ui/chooser/embed/layouts/main.html
@@ -2,11 +2,18 @@
   <head>
     <title>Namespaces</title>
     <link rel="stylesheet" href="/static/css/jquery.dataTables.min.css">
+    <link rel="stylesheet" href="/static/css/namespaces.css">
     <script type="text/javascript" language="javascript" src="/static/js/jquery-3.7.0.js"></script>
     <script type="text/javascript" language="javascript" src="/static/js/jquery.dataTables.min.js"></script>
     <script type="text/javascript" language="javascript" src="/static/js/namespaces.js"></script>
   </head>
   <body>
+    <div class="header">
+        <picture>
+            <source media="(prefers-color-scheme: dark)" srcset="/static/media/logo-dark.svg">
+            <img class="logo" src="/static/media/logo-light.svg" alt="FastTrackML logo">
+        </picture>
+    </div>
 
     {{ embed }}
 
