--- a/pkg/ui/admin/embed/static/css/namespaces.css
+++ b/pkg/ui/admin/embed/static/css/namespaces.css
@@ -7,6 +7,11 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
     border: 0px;
+    margin: 0px;
+}
+
+.content {
+    margin: 10px;
 }
 
 .logo {
@@ -18,6 +23,5 @@ body {
 .header {
     background-color: #f5f7ff;
     text-align: center;
-    padding: 0px;
 }
 
