--- a/pkg/ui/admin/embed/static/css/namespaces.css
+++ b/pkg/ui/admin/embed/static/css/namespaces.css
@@ -1,7 +1,8 @@
 #form-grid {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  width: 300px;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    width: 300px;
+    row-gap: .5em;
 }
 
 body {
