--- a/pkg/ui/admin/embed/layouts/main.html
+++ b/pkg/ui/admin/embed/layouts/main.html
@@ -11,8 +11,8 @@
     <div class="header">
         <a href="/">
           <picture>
-            <source media="(prefers-color-scheme: dark)" srcset="/static/media/logo-dark.svg">
-            <img class="logo" src="/static/media/logo-light.svg" alt="FastTrackML logo">
+            <source media="(prefers-color-scheme: dark)" srcset="/static/chooser/media/logo-dark.svg">
+            <img class="logo" src="/static/chooser/media/logo-light.svg" alt="FastTrackML logo">
           </picture>
 	</a>
     </div>
