--- a/pkg/ui/admin/embed/layouts/main.html
+++ b/pkg/ui/admin/embed/layouts/main.html
@@ -1,26 +1,74 @@
-<html>
-  <head>
-    <title>Namespaces</title>
-    <link rel="stylesheet" href="/admin/static/css/jquery.dataTables.min.css">
-    <link rel="stylesheet" href="/admin/static/css/namespaces.css">
-    <script type="text/javascript" language="javascript" src="/admin/static/js/jquery-3.7.0.js"></script>
-    <script type="text/javascript" language="javascript" src="/admin/static/js/jquery.dataTables.min.js"></script>
-    <script type="text/javascript" language="javascript" src="/admin/static/js/namespaces.js"></script>
-  </head>
-  <body>
-    <div class="header">
-        <a href="/">
-          <picture>
-            <source media="(prefers-color-scheme: dark)" srcset="/static/chooser/media/logo-dark.svg">
-            <img class="logo" src="/static/chooser/media/logo-light.svg" alt="FastTrackML logo">
-          </picture>
-	</a>
-    </div>
+<!DOCTYPE html>
+<html lang="en">
 
-    <div class="content">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>FastTrackML</title>
+  <link rel="stylesheet" href="/static/chooser/css/simple.min.css">
+  <link rel="icon" type="image/x-icon" href="/static/chooser/favicon.ico">
+  <link rel="stylesheet" href="/static/aim/assets/icomoon/icomoonIcons.css">
+  <style>
+    :root {
+      --accent: #00a4e0;
+    }
+
+    main {
+      text-align: center;
+      padding-top: 0px
+    }
+
+    .logo {
+      height: 150px;
+      margin-top: -25px;
+      margin-bottom: -50px;
+    }
+
+    #namespaces {
+      display: inline-table;
+    }
+
+    #form-container {
+      display: flex;
+      justify-content: center;
+    }
+
+    #form-fields {
+      text-align: left;
+    }
+
+    .namespace-actions {
+      text-decoration: none;
+    }
+
+    h1 {
+      font-size: 2.5rem;
+      margin-bottom: 1rem;
+    }
+  </style>
+  <script type="text/javascript" language="javascript" src="/admin/static/js/jquery-3.7.0.js"></script>
+  <script type="text/javascript" language="javascript" src="/admin/static/js/namespaces.js"></script>
+</head>
+
+<body>
+  <header>
+    <a href="/">
+      <picture>
+        <source media="(prefers-color-scheme: dark)" srcset="/static/chooser/media/logo-dark.svg">
+        <img class="logo" src="/static/chooser/media/logo-light.svg" alt="FastTrackML logo">
+      </picture>
+    </a>
+    <p>A <i>very fast</i> experiment tracker</p>
+  </header>
+
+  <main>
     {{ embed }}
-    </div>
-    
-  </body>
-</html>
+  </main>
 
+  <footer>
+    <p>Brought to you by <a href="https://opensource.gresearch.co.uk" target="_blank">G-Research Open-Source</a>.
+    </p>
+  </footer>
+</body>
+
+</html>
