move css from layout to stylesheet

--- a/pkg/ui/admin/embed/static/css/namespaces.css
+++ b/pkg/ui/admin/embed/static/css/namespaces.css
@@ -1,18 +1,10 @@
-#form-grid {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    width: 300px;
-    row-gap: .5em;
+:root {
+    --accent: #00a4e0;
 }
 
-body {
-    font-family: Arial, Helvetica, sans-serif;
-    border: 0px;
-    margin: 0px;
-}
-
-.content {
-    margin: 10px;
+main {
+    text-align: center;
+    padding-top: 0px
 }
 
 .logo {
@@ -21,8 +13,24 @@ body {
     margin-bottom: -50px;
 }
 
-.header {
-    background-color: #f5f7ff;
-    text-align: center;
+#namespaces {
+    display: inline-table;
 }
 
+#form-container {
+    display: flex;
+    justify-content: center;
+}
+
+#form-fields {
+    text-align: left;
+}
+
+.namespace-actions {
+    text-decoration: none;
+}
+
+h1 {
+    font-size: 2.5rem;
+    margin-bottom: 1rem;
+}
