--- a/pkg/ui/admin/embed/layouts/main.html
+++ b/pkg/ui/admin/embed/layouts/main.html
@@ -5,47 +5,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>FastTrackML</title>
-  <link rel="stylesheet" href="/static/chooser/css/simple.min.css">
-  <link rel="icon" type="image/x-icon" href="/static/chooser/favicon.ico">
   <link rel="stylesheet" href="/static/aim/assets/icomoon/icomoonIcons.css">
-  <style>
-    :root {
-      --accent: #00a4e0;
-    }
-
-    main {
-      text-align: center;
-      padding-top: 0px
-    }
-
-    .logo {
-      height: 150px;
-      margin-top: -25px;
-      margin-bottom: -50px;
-    }
-
-    #namespaces {
-      display: inline-table;
-    }
-
-    #form-container {
-      display: flex;
-      justify-content: center;
-    }
-
-    #form-fields {
-      text-align: left;
-    }
-
-    .namespace-actions {
-      text-decoration: none;
-    }
-
-    h1 {
-      font-size: 2.5rem;
-      margin-bottom: 1rem;
-    }
-  </style>
+  <link rel="stylesheet" href="/static/chooser/css/simple.min.css">
+  <link rel="stylesheet" href="/admin/static/css/namespaces.css">
+  <link rel="icon" type="image/x-icon" href="/static/chooser/favicon.ico">
   <script type="text/javascript" language="javascript" src="/admin/static/js/jquery-3.7.0.js"></script>
   <script type="text/javascript" language="javascript" src="/admin/static/js/namespaces.js"></script>
 </head>
