Add help text for namespace code constraints

--- a/pkg/ui/admin/embed/static/css/namespaces.css
+++ b/pkg/ui/admin/embed/static/css/namespaces.css
@@ -38,6 +38,10 @@ main {
     color: darkgreen;
 }
 
+.help-text {
+    font-size:small;
+}
+
 h1 {
     font-size: 2.5rem;
     margin-bottom: 1rem;
