*fox integration tests. integrate `not-found` page into `chooser`.

--- a/pkg/ui/chooser/embed/layouts/main.html
+++ b/pkg/ui/chooser/embed/layouts/main.html
@@ -4,9 +4,9 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>FastTrackML</title>
-        <link rel="stylesheet" href="/chooser/static/css/simple.min.css">
+        <link rel="stylesheet" href="/static/chooser/static/css/simple.min.css">
         <link rel="stylesheet" href="/static/aim/assets/icomoon/icomoonIcons.css">
-        <link rel="icon" type="image/x-icon" href="/chooser/static/favicon.ico">
+        <link rel="icon" type="image/x-icon" href="/static/chooser/static/favicon.ico">
         <style>
             :root {
                 --accent: #00a4e0;
@@ -62,8 +62,8 @@
     <body>
         <header>
             <picture>
-                <source media="(prefers-color-scheme: dark)" srcset="/chooser/static/media/logo-dark.svg">
-                <img class="logo" src="/chooser/static/media/logo-light.svg" alt="FastTrackML logo">
+                <source media="(prefers-color-scheme: dark)" srcset="/static/chooser/static/media/logo-dark.svg">
+                <img class="logo" src="/static/chooser/static/media/logo-light.svg" alt="FastTrackML logo">
             </picture>
             <p>A <i>very fast</i> experiment tracker</p>
         </header>
