Handle correctly not found errors in `admin` and `chooser` parts. (#1060)
Handle correctly not found errors in admin and chooser parts.

--- a/pkg/ui/admin/embed/layouts/main.html
+++ b/pkg/ui/admin/embed/layouts/main.html
@@ -6,9 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>FastTrackML</title>
   <link rel="stylesheet" href="/static/aim/assets/icomoon/icomoonIcons.css">
-  <link rel="stylesheet" href="/static/chooser/css/simple.min.css">
+  <link rel="stylesheet" href="/chooser/static/css/simple.min.css">
   <link rel="stylesheet" href="/admin/static/css/namespaces.css">
-  <link rel="icon" type="image/x-icon" href="/static/chooser/favicon.ico">
+  <link rel="icon" type="image/x-icon" href="/chooser/static/favicon.ico">
   <script type="text/javascript" language="javascript" src="/admin/static/js/jquery-3.7.0.js"></script>
   <script type="text/javascript" language="javascript" src="/admin/static/js/namespaces.js"></script>
 </head>
@@ -17,8 +17,8 @@
   <header>
     <a href="/">
       <picture>
-        <source media="(prefers-color-scheme: dark)" srcset="/static/chooser/media/logo-dark.svg">
-        <img class="logo" src="/static/chooser/media/logo-light.svg" alt="FastTrackML logo">
+        <source media="(prefers-color-scheme: dark)" srcset="/chooser/static/media/logo-dark.svg">
+        <img class="logo" src="/chooser/static/media/logo-light.svg" alt="FastTrackML logo">
       </picture>
     </a>
     <p>A <i>very fast</i> experiment tracker</p>
