Improve main and login page styling

--- a/pkg/ui/chooser/embed/layouts/main.html
+++ b/pkg/ui/chooser/embed/layouts/main.html
@@ -34,7 +34,8 @@
                 overflow:auto;
                 border: 1px solid var(--border);
                 border-radius: 5px;
-                padding: 1rem;
+                padding: 0.5rem;
+                margin: 1rem 0;
             }
 
             #namespaces-list {
@@ -54,6 +55,11 @@
             #current-icon {
                 position: relative;
                 left: -1.5em;
+            }
+
+            .tight {
+                margin-top: 0;
+                margin-bottom: 0.75rem;
             }
 
         </style>
