Improve logout button margins

--- a/pkg/ui/chooser/embed/layouts/main.html
+++ b/pkg/ui/chooser/embed/layouts/main.html
@@ -62,6 +62,10 @@
                 margin-bottom: 0.75rem;
             }
 
+            #logout-button {
+                margin: 1rem 0 0.5rem 0;
+            }
+
         </style>
     </head>
 
