Set button inline with selected namespace

--- a/pkg/ui/chooser/embed/layouts/main.html
+++ b/pkg/ui/chooser/embed/layouts/main.html
@@ -28,6 +28,11 @@
                 margin-bottom: -50px;
             }
 
+            .tight {
+                margin-top: 0;
+                margin-bottom: 0.75rem;
+            }
+
             #namespaces-list-container {
                 display: flex;
                 align-items: center;
@@ -35,7 +40,7 @@
                 border: 1px solid var(--border);
                 border-radius: 5px;
                 padding: 0.5rem;
-                margin: 1rem 0;
+                margin-bottom: 0rem;
             }
 
             #namespaces-list {
@@ -57,13 +62,16 @@
                 left: -1.5em;
             }
 
-            .tight {
-                margin-top: 0;
-                margin-bottom: 0.75rem;
-            }
 
             #logout-button {
-                margin: 1rem 0 0.5rem 0;
+                margin-top: 1rem;
+                margin-bottom: 0.25rem;
+            }
+
+            #selected-namespace-container {
+                display: flex;
+                justify-content: space-between;
+                padding: 0.5rem 1rem;
             }
 
         </style>
