Integrate OIDC login/logout functionality. (#1225)

--- a/pkg/ui/chooser/embed/layouts/main.html
+++ b/pkg/ui/chooser/embed/layouts/main.html
@@ -28,13 +28,19 @@
                 margin-bottom: -50px;
             }
 
+            .tight {
+                margin-top: 0;
+                margin-bottom: 0.75rem;
+            }
+
             #namespaces-list-container {
                 display: flex;
                 align-items: center;
                 overflow:auto;
                 border: 1px solid var(--border);
                 border-radius: 5px;
-                padding: 1rem;
+                padding: 0.5rem;
+                margin-bottom: 0rem;
             }
 
             #namespaces-list {
@@ -54,6 +60,18 @@
             #current-icon {
                 position: relative;
                 left: -1.5em;
+            }
+
+
+            #logout-button {
+                margin-top: 1rem;
+                margin-bottom: 0.25rem;
+            }
+
+            #selected-namespace-container {
+                display: flex;
+                justify-content: space-between;
+                padding: 0.5rem 1rem;
             }
 
         </style>
